--- a/aulas-ao-vivo-trybe/trybe_marketing.html
+++ b/aulas-ao-vivo-trybe/trybe_marketing.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Acelere sua carreira aqui e agora | Trybe</title>
     </head>
+    <body>
+        <h1>Sua carreira de sucesso em tecnologia começa aqui. Agora.</h1>
+        <img src="" alt="">
+    </body>
 </html>
