--- a/aulas-ao-vivo-trybe/trybe_marketing.html
+++ b/aulas-ao-vivo-trybe/trybe_marketing.html
@@ -6,6 +6,49 @@
     </head>
     <body>
         <h1>Sua carreira de sucesso em tecnologia começa aqui. Agora.</h1>
-        <img src="" alt="">
+        <img src="images/smiling-image.jpg" alt="Pessoa Sorrindo" width="400px">
+
+        <p>
+            Com atividades presenciais e online, mentorias individuais e desafios práticos, a Trybe é a escola do futuro e para o futuro que acelera sua carreira em desenvolvimento de software em até 12 meses.<br><br/>
+
+            E o melhor? <strong>Você não paga nada até conseguir um trabalho com uma remuneração de, no mínimo, R$ 3.500,00 por mês.</strong>
+        </p>
+
+        <hr>
+        <h3>A Trybe é para todos, inclusive para VOCÊ.</h3>
+
+        <p>
+            Para você que <strong>já é estudante de computação</strong>, para você que <strong>se interessa pelo assunto</strong> e até mesmo para <strong>você que está pensando em mudar de carreira</strong> e ainda não conhece nada.<br><br/>
+
+            A Trybe funciona para <strong>qualquer pessoa</strong> que queira uma <strong>carreira de sucesso em tecnologia.</strong><br><br/>
+
+            <strong>E QUE TENHA MUITA VONTADE E DEDICAÇÃO!</strong>
+        </p>
+        <img src="images/conrado-medeiros.png" alt="Conrado Medeiros" width="100px">
+        <p>"Eu trabalho com Marketing e não tinha nenhuma formação ou experiência na área e consegui entrar na Trybe para me tornar desenvolvedor de software."</p>
+        <h4>
+            Conrado Medeiros
+            ‍Aluno da Turma de Setembro - BH
+        </h4>
+
+        <img src="images/gabriel-dos-santos.png" alt="Gabriel dos Santos" width="100px">
+        <p>"Eu não sabia nada de programação! Estudei os conteúdos gratuitos disponibilizados, consegui fazer o processo e passar. Estou aqui firme e forte para conseguir virar um desenvolvedor."</p>
+        <h4>
+            Gabriel dos Santos
+            ‍Aluno da Turma de Setembro - BH
+        </h4>
+
+        <img src="images/anderson-bolivar.png" alt="Anderson Bolivar" width="100px">
+        <p>"Sou estudante de Engenharia Química e entrei na Trybe sem nenhuma experiência na área e estou animado para me tornar desenvolvedor."</p>
+        <h4>
+            Anderson Bolivar
+            Aluno da Turma de Setembro - BH
+        </h4>
+
+        <hr>
+        <h3>Quem somos  e porque estamos aqui?</h3>
+
+        <hr>
+        <h3>Como é a formação?</h3>
     </body>
 </html>
