--- a/aulas-ao-vivo-trybe/trybe_marketing.html
+++ b/aulas-ao-vivo-trybe/trybe_marketing.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Acelere sua carreira aqui e agora | Trybe</title>
     </head>
+    <!--https://betrybe-0.webflow.io/-->
     <body>
         <h1>Sua carreira de sucesso em tecnologia começa aqui. Agora.</h1>
         <img src="images/smiling-image.jpg" alt="Pessoa Sorrindo" width="400px">
@@ -47,8 +48,31 @@
 
         <hr>
         <h3>Quem somos  e porque estamos aqui?</h3>
+        <img src="https://uploads-ssl.webflow.com/5d4c18a28620ae5d4f33af94/5d82bafbe8178d5be56113af_Matheus%20Goyas.jpeg" alt="Matheus Goyas" width="100px">
+        <p>Fundamos a Trybe porque acreditamos que qualquer pessoa que tenha muita vontade de vencer, independente da formação ou da condição financeira, é capaz de ter uma carreira de sucesso.</p>
+        <h4>
+            Matheus Goyas,
+            CEO e Co-fundador da Trybe
+        </h4>
+
+        <img src="https://uploads-ssl.webflow.com/5d4c18a28620ae5d4f33af94/5d82bb0b28a6013c896ebf4b_Joao%20Daniel.jpeg" alt="João Duarte" width="100px">
+        <p>Temos a premissa de fazer os estudantes viverem na prática desafios idênticos aos enfrentados na vida real. Nosso compromisso é tão grande com o sucesso, que a Trybe só ganha se os nossos estudantes estiverem ganhando bem.</p>
+        <h4>
+            João Duarte,
+            CTO e Co-fundador da Trybe
+        </h4>
 
         <hr>
         <h3>Como é a formação?</h3>
+        <ul>
+            <li>Atividades online, offline e apoio individual para cada aluno</li>
+            <li>Experiência mão na massa, lidando com desafios e problemas reais</li>
+            <li>Equipe dedicada a te ajudar a encontrar a oportunidade profissional perfeita para você</li>
+            <li>Vivência das rotinas e processos reais de desenvolvimento das empresas de ponta</li>
+        </ul>
+        <img src="images/learning-web.jpeg" alt="Duas pessoas aprendendo a programar" width="600px">
+
+        <h4>Quer saber mais sobre nossa formação?</h4>
+        <a href="https://betrybe.com/formacao" target="_blank">Faça o download do nosso currículo</a>
     </body>
 </html>
