--- a/exercises-trybe/3.2/exercicio-conteudo/index.html
+++ b/exercises-trybe/3.2/exercicio-conteudo/index.html
@@ -16,5 +16,19 @@
             <p><a href="resolucao1.html" target="_blank">Ir para resolução</a></p>
             <hr>
         </p>
+
+        <h1>Exercício 2</h1>
+        <p>
+            <ol>
+                <li>Modifique o família do h1 para sans-serif</li>
+                <li>Deixe o parágrafo com o font-weight 600</li>
+                <li>Modifique o font-size do body para 16px</li>
+                <li>Coloque o tamanho do parágrafo com o tamanho de 3 vezes o padrão do body</li>
+                <li>Explore as propriedades font-style, line-height, text-align e text-decoration</li>
+                <li>Troque a cor de fundo de cada item da lista para a cor correspondente ao texto</li>
+            </ol>
+            <p><a href="resolucao2.html" target="_blank">Ir para resolução</a></p>
+            <hr>
+        </p>
     </body>
 </html>
