Resolução exercício 3 do conteúdo

--- a/exercises-trybe/3.2/exercicio-conteudo/index.html
+++ b/exercises-trybe/3.2/exercicio-conteudo/index.html
@@ -30,5 +30,13 @@
             <p><a href="resolucao2.html" target="_blank">Ir para resolução</a></p>
             <hr>
         </p>
+
+        <h1>Exercício 3</h1>
+        <p>
+            <ol>
+                <li>Coloque todo o CSS criado até agora nos exercícios anteriores em um arquivo externo.</li>
+            </ol>
+            <hr>
+        </p>
     </body>
 </html>
