--- a/exercises-trybe/3.2/exercicio-conteudo/resolucao1.html
+++ b/exercises-trybe/3.2/exercicio-conteudo/resolucao1.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Resolução exercício 1</title>
+        <!--
         <style>
             h1{
                 font-size: 65px;
@@ -17,6 +18,8 @@
                 background-color:rgb(107, 46,200);
             }
         </style>
+        -->
+        <link rel="stylesheet" type="text/css" href="css/resolucao1.css">
     </head>
     <body>
         <h1>Exercícios 3.2</h1>
