--- a/exercises-trybe/3.2/exercicio-conteudo/resolucao2.html
+++ b/exercises-trybe/3.2/exercicio-conteudo/resolucao2.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Resolução exercício 2</title>
+        <!--
         <style>
             body{
                 font-size: 16px;
@@ -36,6 +37,8 @@
                 background-color: brown;
             }
         </style>
+        -->
+        <link rel="stylesheet" type="text/css" href="css/resolucao2.css">
     </head>
     <body>
         <h1>Exercícios 3.2</h1>
