--- a/aulas-ao-vivo-trybe/trybe_marketing.html
+++ b/aulas-ao-vivo-trybe/trybe_marketing.html
@@ -3,8 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Acelere sua carreira aqui e agora | Trybe</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Itim&family=Montserrat:wght@100&display=swap" rel="stylesheet">
+        <style>
+            body{
+                font-family: Montserrat,sans-serif;
+            }
+        </style>
     </head>
-    <!--https://betrybe-0.webflow.io/-->
+    <!-- https://betrybe-0.webflow.io/ -->
     <body>
         <h1>Sua carreira de sucesso em tecnologia começa aqui. Agora.</h1>
         <img src="images/smiling-image.jpg" alt="Pessoa Sorrindo" width="400px">
