Finalizando requisito 3 --> adicionar fatos sobre a Stomatopoda

--- a/fundamentos/bloco3-introducao-a-html-e-css/dia4-html-semantico/exercises/exercise1/index.html
+++ b/fundamentos/bloco3-introducao-a-html-e-css/dia4-html-semantico/exercises/exercise1/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>Stomatopoda</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header>
@@ -15,5 +17,22 @@
         </nav>
         <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
     </header>
+
+    <article>
+        <h2>Fatos sobre a Stomatopoda</h2>
+        <ul>
+          <li><span class="negrito">Nome científico:</span> Stomatopoda (por exemplo, Odontodactylus scyllarus)</li>
+          <li><span class="negrito">Outros nomes:</span> Stomatopod, gafanhoto do mar, separador de polegar, matador de camarão</li>
+          <li><span class="negrito">Características distintas:</span> Olhos montados em caules móveis que podem se mover independentemente um do outro</li>
+          <li><span class="negrito">Tamanho médio:</span> 10 centímetros (3,9 pol.)</li>
+          <li><span class="negrito">Dieta:</span> Carnívoro</li>
+          <li><span class="negrito">Vida útil:</span> 20 anos</li>
+          <li><span class="negrito">Habitat:</span> Ambientes marinhos tropicais e subtropicais rasos</li>
+          <li><span class="negrito">Estado de conservação:</span> Não avaliado</li>
+          <li><span class="negrito">Reino:</span> Animalia</li>
+          <li><span class="negrito">Fato engraçado:</span> Um ataque de uma garra de camarão mantis é tão forte que pode quebrar o vidro do aquário.</li>
+        </ul>
+    </article>
+
   </body>
 </html>
