--- a/fundamentos/bloco5-javascript-DOM-eventos-e-web-storage/dia1-DOM-e-seletores/conteudo/exercises.html
+++ b/fundamentos/bloco5-javascript-DOM-eventos-e-web-storage/dia1-DOM-e-seletores/conteudo/exercises.html
@@ -3,6 +3,7 @@
   <body>
     <!-- Recupere o elemento que contém o título da página e faça algo com ele, como alterá-lo para o nome do seu filme favorito. -->
     <!-- Agora recupere o segundo parágrafo e use sua criatividade para alterá-lo. -->
+    <!-- Por fim, recupere o subtítulo e altere-o também. -->
 
     <h2 id="page-title">Título</h2>
     <p id="paragraph">Dê uma cor para este parágrafo!</p>
@@ -13,10 +14,12 @@
       const paragraph = document.getElementById("paragraph");
       const secondParagraph = document.getElementById('second-paragraph');
       let pageTitle = document.getElementById('page-title');
+      let subtitle = document.getElementById('subtitle');
 
       paragraph.style.color = "red";
       pageTitle.innerText = 'Lord of The Rings';
       secondParagraph.innerText = 'Maneiro!';
+      subtitle.innerText = 'Senhor dos Anéis é maneiro?';
     </script>
   </body>
 </html>
