Exercício 01 da parte 2 do conteúdo --> Finalizado.

--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia3-css-flexbox-parte-1/conteudo/exercise01.html
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia3-css-flexbox-parte-1/conteudo/exercise01.html
@@ -19,7 +19,19 @@
       .box-container {
         background-color: #0fa36b;
         display: flex;
-        /* ADICIONE AQUI SEUS TESTES */
+
+        /* Fica um em cima do outro */
+        /* flex-direction: column; */
+
+        /* Fica na ordem inversa um embaixo do outro */
+        /* flex-direction: column-reverse; */
+
+        /* propriedade padrão um ao lado do outro: */
+        /* flex-direction: row; */
+
+        /* Fica na ordem inversa um ao lado do outro */
+        /* flex-direction: row-reverse; */
+
       }
     </style>
 
