Exercício 02 da parte 2 do conteúdo --> Finalizado.

--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia3-css-flexbox-parte-1/conteudo/exercise01.html
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia3-css-flexbox-parte-1/conteudo/exercise01.html
@@ -32,6 +32,14 @@
         /* Fica na ordem inversa um ao lado do outro */
         /* flex-direction: row-reverse; */
 
+        /* quebra o conteudo para caber dentro do container */
+        /* flex-wrap: wrap; */
+
+        /* é o padrão, o conteúdo não quebra para caber no container */
+        /* flex-wrap: nowrap; */
+
+        /* Faz a quebra do conteúdo ao contrário */
+        /* flex-wrap:wrap-reverse; */
       }
     </style>
 
