Exercício 03 da parte 2 do conteúdo --> Finalizado.

--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia3-css-flexbox-parte-1/conteudo/exercise01.html
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia3-css-flexbox-parte-1/conteudo/exercise01.html
@@ -40,6 +40,8 @@
 
         /* Faz a quebra do conteúdo ao contrário */
         /* flex-wrap:wrap-reverse; */
+
+        flex-flow: row wrap;
       }
     </style>
 
