--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia4-css-flexbox-parte2/conteudo/exercise01.html
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia4-css-flexbox-parte2/conteudo/exercise01.html
@@ -14,7 +14,7 @@
       }
 
       .keep {
-        align-self: center;
+        align-self: flex-start;
         background-color: #FAA488;
         display: flex;
         justify-content: center;
