--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia4-css-flexbox-parte2/conteudo/exercise01.html
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia4-css-flexbox-parte2/conteudo/exercise01.html
@@ -14,7 +14,7 @@
       }
 
       .keep {
-        align-self: flex-start;
+        align-self: center;
         background-color: #FAA488;
         display: flex;
         justify-content: center;
@@ -23,7 +23,7 @@
 
       .change {
         /* Altere a propriedade align-self. */
-        align-self: center;
+        align-self: flex-end;
         background-color: #FBD26A;
         display: flex;
         justify-content: center;
