--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia4-css-flexbox-parte2/conteudo/exercise01.html
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia4-css-flexbox-parte2/conteudo/exercise01.html
@@ -23,7 +23,7 @@
 
       .change {
         /* Altere a propriedade align-self. */
-        align-self: stretch;
+        align-self: center;
         background-color: #FBD26A;
         display: flex;
         justify-content: center;
