--- a/front-end/bloco16-gerenciamento-de-estado-com-redux/dia01-introducao-ao-redux-o-estado-global-da-aplicacao/exercises/index.html
+++ b/front-end/bloco16-gerenciamento-de-estado-com-redux/dia01-introducao-ao-redux-o-estado-global-da-aplicacao/exercises/index.html
@@ -37,6 +37,8 @@
         colors: ['white', 'black', 'red', 'green', 'blue', 'yellow'],
         index: 0,
       };
+
+      const store = Redux.createStore();
     </script>
   </body>
 </html>
