--- a/front-end/bloco16-gerenciamento-de-estado-com-redux/dia01-introducao-ao-redux-o-estado-global-da-aplicacao/exercises/index.html
+++ b/front-end/bloco16-gerenciamento-de-estado-com-redux/dia01-introducao-ao-redux-o-estado-global-da-aplicacao/exercises/index.html
@@ -38,7 +38,11 @@
         index: 0,
       };
 
-      const store = Redux.createStore();
+      const reducer  = (state = ESTADO_INICIAL, action) => {
+        
+      }
+
+      const store = Redux.createStore(reducer);
     </script>
   </body>
 </html>
