--- a/front-end/bloco16-gerenciamento-de-estado-com-redux/dia01-introducao-ao-redux-o-estado-global-da-aplicacao/exercises/index.html
+++ b/front-end/bloco16-gerenciamento-de-estado-com-redux/dia01-introducao-ao-redux-o-estado-global-da-aplicacao/exercises/index.html
@@ -38,9 +38,29 @@
         index: 0,
       };
 
-      const reducer  = (state = ESTADO_INICIAL, { type }) => {
+      const NEXT_COLOR = 'NEXT_COLOR';
+      const PREVIOUS_COLOR = 'PREVIOUS_COLOR';
 
+      // Actions
+      const nextColor = () => ({ type: NEXT_COLOR });
+      const previousColor = () => ({ type: PREVIOUS_COLOR });
+
+      // Reducer
+
+      const reducer  = (state = ESTADO_INICIAL, { type }) => {
+        const { colors } = state;
+
+        switch (type) {
+          case NEXT_COLOR:
+            return { index: state.index < colors.length - 1 && state.index + 1 };
+          case PREVIOUS_COLOR:
+            return { index: colors.length > 0 && state.index - 1 };
+          default:
+            return state;
+        }
       }
+
+      // Store
 
       const store = Redux.createStore(reducer);
     </script>
